--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 		<link rel="stylesheet" href="./css/works.css">
 		<link rel="stylesheet" href="./css/life.css">
 	</head>
-<!-- Global site tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137829229-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7TXZQX8R31"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-137829229-1');
+  gtag('config', 'G-7TXZQX8R31');
 </script>
 
 	<body>
