--- a/works.html
+++ b/works.html
@@ -11,6 +11,15 @@
 		<link rel="stylesheet" href="./css/common.css">
 		<link rel="stylesheet" href="./css/works.css">
 	</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7TXZQX8R31"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7TXZQX8R31');
+</script>
 
 	<body>
 		<div class="wrapper">
