--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div id="ideas"></div>
 				<div id="light"></div>
 				<div class="monitor_effect">
-					<div class="contentSpaceTop">
+					<div class="contentSpace">
 						<div class="chapterName"><span class="white_text">Hello</span><br />
 							World</div><br /><br /><br />
 						<div class="typewriter white_text">
@@ -97,7 +97,7 @@
 							</tbody>
 						</table>
 					
-						<img class="img-responsive" src="img/original/onstage2.png" alt="interviewImg" style="margin-bottom: 20px;">
+						<img class="img-responsive" src="img/original/onstage2.png" alt="interviewImg" style="margin:0 0 30px;">
 						<div class="xs_layout interview">
 							<p>
 								I am an illustrator and graphic designer based in Tokyo, Japan.
