--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
 							<p>
 								The <a href="#contact">contact form</a> is at the bottom of this website.
 							</p>
+							<div class="skills">
+								<dl>
+									<dt><img src="img/logos/illustrator_logo.png" alt="ai_logo"></dt>
+									<dd>★★★☆☆</dd>
+									<dt><img src="img/logos/photoshop_logo.png" alt="ps_logo"></dt>
+									<dd>★★★☆☆</dd>
+									<dt><img src="img/logos/indesign_logo.png" alt="id_logo"></dt>
+									<dd>★★☆☆☆</dd>
+								</dl>
+							</div>
 						</div>
 					</div>
 					<div class="md_layout col-sm-6">
@@ -128,6 +138,16 @@
 							<p>
 								The <a href="#contact">contact form</a> is at the bottom of this website.
 							</p>
+							<div class="skills">
+								<dl>
+									<dt><img src="img/logos/illustrator_logo.png" alt="ai_logo"></dt>
+									<dd>★★★☆☆</dd>
+									<dt><img src="img/logos/photoshop_logo.png" alt="ai_logo"></dt>
+									<dd>★★★☆☆</dd>
+									<dt><img src="img/logos/indesign_logo.png" alt="ai_logo"></dt>
+									<dd>★★☆☆☆</dd>
+								</dl>
+							</div>
 						</div>
 					</div>
 				</div>
