--- a/index.html
+++ b/index.html
@@ -158,26 +158,44 @@
 			<!-- WORK -->
 			<div class="work_bg">
 				<div id="work" class="setAnchor"></div>
-				<div class="contentSpace">
-					<div class="chapterName cream_text">Work</div>
+				<div class="contentSpaceWork clearfix">
+					<div class="title"><div class="chapterName cream_text">Work</div></div>
+					<div class="working_crow"><img src="img/work/work-bg-light1.png" height="400px"></div>
 				</div>
-				<div class="workType01 col-xs-12 col-sm-6 col-md-3">
-					<p class="workTypeTitle">Packaging Design</p>
-					<img src="" alt="packaging">
-					<a href="work/packaging.html"><div class="go2workpage"></div></a>
-				</div>
-				<div class="workType02 col-xs-12 col-sm-6 col-md-3">
-					<img src="" alt="packaging">
-					<a href="work/print.html"><div class="go2workpage"></div></a>
-				</div>
-				<div class="workType03 col-xs-12 col-sm-6 col-md-3">
-					<img src="" alt="packaging">
-					<a href="work/ads.html"><div class="go2workpage"></div></a>
-				</div>
-				<div class="workType04 col-xs-12 col-sm-6 col-md-3">
-					<img src="" alt="packaging">
-					<a href="work/illustration.html"><div class="go2workpage"></div></a>
-				</div>
+				<ul>
+					<li>
+						<div class="workType01">
+							<a href="work/packaging.html">
+								<img src="img/work/hasamikikubox.jpg" alt="packaging">
+								<p class="workTypeTitle">Packaging Design</p>
+							</a>
+						</div>
+					</li>
+					<li>
+						<div class="workType02">
+							<a href="work/print.html">
+								<img src="img/work/print.jpg" alt="print">
+								<p class="workTypeTitle">Print Design</p>
+							</a>
+						</div>
+					</li>
+					<li>
+						<div class="workType03">
+							<a href="work/ads.html">
+								<img src="img/work/ads.jpg" alt="ads">
+								<p class="workTypeTitle">Advertising Design</p>
+							</a>
+						</div>
+					</li>
+					<li>
+						<div class="workType04">
+							<a href="work/illustration.html">
+								<img src="img/work/illustration.jpg" alt="illustration">
+								<p class="workTypeTitle">Illustration</p>
+							</a>
+						</div>
+					</li>
+				</ul>
 				<div id="goDown"><a href="#contact"><svg><use xlink:href="#godown"></use></svg></a></div>
 			</div><!--work_bg-->
 			
